--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Phone3</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header>
-        
+        <p id="logo"><img src="img/logo.png" alt=""></p>
     </header>
 </body>
 </html>
